--- a/sixarm-debian-javascript-packages-1.0.0/DEBIAN/control
+++ b/sixarm-debian-javascript-packages-1.0.0/DEBIAN/control
@@ -3,7 +3,7 @@ Version: 1.0.1
 Section: devel
 Priority: optional
 Architecture: all
-Depends: libv8-dev openssl libssl-dev curl libssl-dev
+Depends: libv8-dev openssl libssl-dev curl libssl-dev npm
 Maintainer: Joel Parker Henderson <joel@sixarm.com>
 Description: Javascript stack of pacakges we like to use
  Javascript packages we like to use together.
